<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todo_list_row"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:elevation="8dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/task"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxIsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

        <ImageView
            android:id="@+id/imageCalenderIcon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="56dp"
            android:contentDescription="@string/calender_image"
            android:src="@drawable/ic_calender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTask"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/date_to_do"
            android:textSize="14sp"
            android:textColor="#555555"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageCalenderIcon"
            app:layout_constraintTop_toBottomOf="@+id/textViewTask"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/buttonDeleteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/delete_task_image_button_description"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_bias="0.485"
            app:srcCompat="@drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
